<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_characters"
            android:title="@string/characters"
            android:icon="@drawable/ic_people_black_24dp"/>

        <item
            android:id="@+id/nav_localization"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/localization"/>

        <item
            android:id="@+id/nav_episodies"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/episodies"
            />


    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
