<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cursoandroid.oliveiragabriel.rickandmortydatabook.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.cursoandroid.oliveiragabriel.rickandmortydatabook.ui.send.AboutFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_characters"
        android:name="com.cursoandroid.oliveiragabriel.rickandmortydatabook.ui.characters.CharactersFragment"
        android:label="Characters"
        tools:layout="@layout/fragment_characters"/>

    <fragment
        android:id="@+id/nav_episodies"
        android:name="com.cursoandroid.oliveiragabriel.rickandmortydatabook.ui.episodies.EpisodiesFragment"
        android:label="Episodies"
        tools:layout="@layout/fragment_episodies" />

    <fragment
        android:id="@+id/nav_localization"
        android:name="com.cursoandroid.oliveiragabriel.rickandmortydatabook.ui.localization.LocalizationFragment"
        android:label="@string/localization"
        tools:layout="@layout/fragment_localization"/>

    <fragment
        android:id="@+id/nav_opening"
        android:name="com.cursoandroid.oliveiragabriel.rickandmortydatabook.ui.opening.OpeningFragment"
        android:label="Opening Video"
        tools:layout="@layout/fragment_opening"/>

</navigation>